[gd_scene load_steps=29 format=2]

[ext_resource path="res://assets/art/weapons/weapons2_.png" type="Texture" id=1]
[ext_resource path="res://assets/art/resources/resources_basic.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/Popup_Window_Dark_16x16.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/Status_icons_16x16.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/Heart_Drop_Star_16x16.png" type="Texture" id=5]
[ext_resource path="res://src/UserInterface/CraftingMenu.gd" type="Script" id=6]
[ext_resource path="res://assets/ui/Menu_icons_16x16.png" type="Texture" id=7]
[ext_resource path="res://assets/art/weapons/weapons_.png" type="Texture" id=8]
[ext_resource path="res://src/UserInterface/Button.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/ui/monogram-extended.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://assets/ui/crosshair030.png" type="Texture" id=11]
[ext_resource path="res://assets/audio/error_006.ogg" type="AudioStream" id=12]
[ext_resource path="res://assets/audio/SUCCESS BEEPS Multi Echo Short 03.wav" type="AudioStream" id=13]
[ext_resource path="res://assets/particles/star.png" type="Texture" id=14]

[sub_resource type="StyleBoxEmpty" id=19]

[sub_resource type="StyleBoxEmpty" id=20]

[sub_resource type="StyleBoxEmpty" id=21]

[sub_resource type="StyleBoxEmpty" id=22]

[sub_resource type="StyleBoxEmpty" id=23]

[sub_resource type="DynamicFont" id=18]
size = 8
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=24]
size = 6
font_data = ExtResource( 10 )

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="StyleBoxEmpty" id=17]

[sub_resource type="Animation" id=25]
resource_name = "animate"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("TopL/TopLeft:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 8, 0 ), Vector2( 4, -4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TopR/TopRight:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 315, 1.14441e-05 ), Vector2( 319, -4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BottomL/BottomLeft:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 8, 95 ), Vector2( 4, 99 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BottomR/BottomRight:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 315, 95 ), Vector2( 319, 99 ) ]
}

[sub_resource type="ParticlesMaterial" id=26]
lifetime_randomness = 1.0
emission_shape = 2
emission_box_extents = Vector3( 2, 5, 1 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
gravity = Vector3( 0, 100, 0 )
initial_velocity = 50.0
angular_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.4

[node name="CraftingMenu" type="Node"]
script = ExtResource( 6 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Overlay" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupWindow" type="Control" parent="CanvasLayer"]
margin_right = 70.0
margin_bottom = 93.0
rect_pivot_offset = Vector2( 0, 46 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Window" type="NinePatchRect" parent="CanvasLayer/PopupWindow"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
region_rect = Rect2( 0, 96, 48, 48 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Close" type="NinePatchRect" parent="CanvasLayer/PopupWindow"]
margin_left = 54.0
margin_right = 70.0
margin_bottom = 17.0
texture = ExtResource( 3 )
region_rect = Rect2( 48, 96, 16, 16 )
patch_margin_top = 8
patch_margin_right = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot1" type="Button" parent="CanvasLayer/PopupWindow"]
margin_top = 8.0
margin_right = 70.0
margin_bottom = 28.0
rect_pivot_offset = Vector2( 35, 10 )
custom_styles/hover = SubResource( 19 )
custom_styles/pressed = SubResource( 20 )
custom_styles/focus = SubResource( 21 )
custom_styles/disabled = SubResource( 22 )
custom_styles/normal = SubResource( 23 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Res1" type="Sprite" parent="CanvasLayer/PopupWindow/Slot1"]
position = Vector2( 39, 9 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
hframes = 11
vframes = 11

[node name="Res2" type="Sprite" parent="CanvasLayer/PopupWindow/Slot1"]
position = Vector2( 62, 10 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
hframes = 11
vframes = 11
frame = 45

[node name="Res1Count" type="Label" parent="CanvasLayer/PopupWindow/Slot1"]
margin_left = 22.0
margin_top = 5.0
margin_right = 32.0
margin_bottom = 15.0
rect_min_size = Vector2( 10, 10 )
custom_colors/font_color = Color( 0.509804, 0.509804, 0.509804, 1 )
custom_fonts/font = SubResource( 18 )
text = "100"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Res2Count" type="Label" parent="CanvasLayer/PopupWindow/Slot1"]
margin_left = 46.0
margin_top = 5.0
margin_right = 56.0
margin_bottom = 15.0
rect_min_size = Vector2( 10, 10 )
custom_fonts/font = SubResource( 18 )
text = "10"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot" type="NinePatchRect" parent="CanvasLayer/PopupWindow/Slot1"]
margin_left = 5.0
margin_top = 2.0
margin_right = 21.0
margin_bottom = 18.0
texture = ExtResource( 3 )
region_rect = Rect2( 0, 48, 48, 48 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="CanvasLayer/PopupWindow/Slot1/Slot"]
position = Vector2( 8, 13 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )
offset = Vector2( 0, -10 )
hframes = 5
vframes = 5

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/PopupWindow/Slot1/Slot"]
margin_left = 10.0
margin_top = 13.0
margin_right = 20.0
margin_bottom = 18.0
color = Color( 0.25098, 0.286275, 0.45098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/PopupWindow/Slot1/Slot"]
margin_left = 11.0
margin_top = 12.0
margin_right = 19.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 24 )
text = "Lv.1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot2" type="Button" parent="CanvasLayer/PopupWindow"]
margin_top = 28.0
margin_right = 70.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 35, 10 )
custom_styles/hover = SubResource( 19 )
custom_styles/pressed = SubResource( 20 )
custom_styles/focus = SubResource( 21 )
custom_styles/disabled = SubResource( 22 )
custom_styles/normal = SubResource( 23 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Res1" type="Sprite" parent="CanvasLayer/PopupWindow/Slot2"]
position = Vector2( 39, 9 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
hframes = 11
vframes = 11

[node name="Res2" type="Sprite" parent="CanvasLayer/PopupWindow/Slot2"]
position = Vector2( 62, 10 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
hframes = 11
vframes = 11
frame = 45

[node name="Res1Count" type="Label" parent="CanvasLayer/PopupWindow/Slot2"]
margin_left = 22.0
margin_top = 5.0
margin_right = 32.0
margin_bottom = 15.0
rect_min_size = Vector2( 10, 10 )
custom_colors/font_color = Color( 0.509804, 0.509804, 0.509804, 1 )
custom_fonts/font = SubResource( 18 )
text = "100"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Res2Count" type="Label" parent="CanvasLayer/PopupWindow/Slot2"]
margin_left = 46.0
margin_top = 5.0
margin_right = 56.0
margin_bottom = 15.0
rect_min_size = Vector2( 10, 10 )
custom_fonts/font = SubResource( 18 )
text = "100"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot" type="NinePatchRect" parent="CanvasLayer/PopupWindow/Slot2"]
margin_left = 5.0
margin_top = 2.0
margin_right = 21.0
margin_bottom = 18.0
texture = ExtResource( 3 )
region_rect = Rect2( 0, 48, 48, 48 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="CanvasLayer/PopupWindow/Slot2/Slot"]
position = Vector2( 8, 13 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
offset = Vector2( 0, -10 )
hframes = 5
vframes = 5
frame = 5

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/PopupWindow/Slot2/Slot"]
margin_left = 10.0
margin_top = 13.0
margin_right = 20.0
margin_bottom = 18.0
color = Color( 0.25098, 0.286275, 0.45098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/PopupWindow/Slot2/Slot"]
margin_left = 11.0
margin_top = 12.0
margin_right = 19.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 24 )
text = "Lv.1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot3" type="Button" parent="CanvasLayer/PopupWindow"]
margin_top = 48.0
margin_right = 70.0
margin_bottom = 68.0
rect_pivot_offset = Vector2( 35, 10 )
custom_styles/hover = SubResource( 19 )
custom_styles/pressed = SubResource( 20 )
custom_styles/focus = SubResource( 21 )
custom_styles/disabled = SubResource( 22 )
custom_styles/normal = SubResource( 23 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Res1" type="Sprite" parent="CanvasLayer/PopupWindow/Slot3"]
position = Vector2( 39, 9 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
hframes = 11
vframes = 11

[node name="Res2" type="Sprite" parent="CanvasLayer/PopupWindow/Slot3"]
position = Vector2( 62, 10 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
hframes = 11
vframes = 11
frame = 45

[node name="Res1Count" type="Label" parent="CanvasLayer/PopupWindow/Slot3"]
margin_left = 22.0
margin_top = 5.0
margin_right = 32.0
margin_bottom = 15.0
rect_min_size = Vector2( 10, 10 )
custom_colors/font_color = Color( 0.509804, 0.509804, 0.509804, 1 )
custom_fonts/font = SubResource( 18 )
text = "100"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Res2Count" type="Label" parent="CanvasLayer/PopupWindow/Slot3"]
margin_left = 46.0
margin_top = 5.0
margin_right = 56.0
margin_bottom = 15.0
rect_min_size = Vector2( 10, 10 )
custom_fonts/font = SubResource( 18 )
text = "100"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot" type="NinePatchRect" parent="CanvasLayer/PopupWindow/Slot3"]
margin_left = 5.0
margin_top = 2.0
margin_right = 21.0
margin_bottom = 18.0
texture = ExtResource( 3 )
region_rect = Rect2( 0, 48, 48, 48 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="CanvasLayer/PopupWindow/Slot3/Slot"]
position = Vector2( 8, 13 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )
offset = Vector2( 0, -10 )
hframes = 5
vframes = 5
frame = 5

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/PopupWindow/Slot3/Slot"]
margin_left = 10.0
margin_top = 13.0
margin_right = 20.0
margin_bottom = 18.0
color = Color( 0.25098, 0.286275, 0.45098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/PopupWindow/Slot3/Slot"]
margin_left = 11.0
margin_top = 12.0
margin_right = 19.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 24 )
text = "Lv.1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestButton" parent="CanvasLayer/PopupWindow" instance=ExtResource( 9 )]
margin_left = 5.0
margin_top = 70.0
margin_right = 30.0
margin_bottom = 88.0
width = 25
height = 18
variant = 4
color = Color( 1, 1, 1, 1 )

[node name="Sprite2" type="Sprite" parent="CanvasLayer/PopupWindow/RestButton"]
position = Vector2( 12, 4 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 5 )
hframes = 11
vframes = 15

[node name="Sprite3" type="Sprite" parent="CanvasLayer/PopupWindow/RestButton"]
position = Vector2( 20, 2 )
texture = ExtResource( 4 )
hframes = 4
vframes = 28
frame = 32

[node name="UpgradeButton" parent="CanvasLayer/PopupWindow" instance=ExtResource( 9 )]
margin_left = 40.0
margin_top = 70.0
margin_right = 65.0
margin_bottom = 88.0
width = 25
height = 18
variant = 6

[node name="Sprite2" type="Sprite" parent="CanvasLayer/PopupWindow/UpgradeButton"]
position = Vector2( 16, 6 )
scale = Vector2( 1.25, 1.25 )
texture = ExtResource( 7 )
hframes = 4
vframes = 10
frame = 6

[node name="Sprite3" type="Sprite" parent="CanvasLayer/PopupWindow/UpgradeButton"]
position = Vector2( 20, 2 )
texture = ExtResource( 4 )
hframes = 4
vframes = 28
frame = 16

[node name="CloseButton" type="Button" parent="CanvasLayer/PopupWindow"]
margin_left = 56.0
margin_right = 70.0
margin_bottom = 14.0
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 14 )
custom_styles/focus = SubResource( 15 )
custom_styles/disabled = SubResource( 16 )
custom_styles/normal = SubResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Crosshair" type="Node2D" parent="CanvasLayer/PopupWindow"]
position = Vector2( 3, 9 )
scale = Vector2( 0.2, 0.2 )

[node name="TopL" type="Node2D" parent="CanvasLayer/PopupWindow/Crosshair"]

[node name="TopLeft" type="Sprite" parent="CanvasLayer/PopupWindow/Crosshair/TopL"]
position = Vector2( 8, 0 )
texture = ExtResource( 11 )
hframes = 2
vframes = 2

[node name="TopR" type="Node2D" parent="CanvasLayer/PopupWindow/Crosshair"]

[node name="TopRight" type="Sprite" parent="CanvasLayer/PopupWindow/Crosshair/TopR"]
position = Vector2( 315, 1.14441e-05 )
texture = ExtResource( 11 )
hframes = 2
vframes = 2
frame = 1

[node name="BottomL" type="Node2D" parent="CanvasLayer/PopupWindow/Crosshair"]

[node name="BottomLeft" type="Sprite" parent="CanvasLayer/PopupWindow/Crosshair/BottomL"]
position = Vector2( 8, 95 )
texture = ExtResource( 11 )
hframes = 2
vframes = 2
frame = 2

[node name="BottomR" type="Node2D" parent="CanvasLayer/PopupWindow/Crosshair"]

[node name="BottomRight" type="Sprite" parent="CanvasLayer/PopupWindow/Crosshair/BottomR"]
position = Vector2( 315, 95 )
texture = ExtResource( 11 )
hframes = 2
vframes = 2
frame = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/PopupWindow/Crosshair"]
anims/animate = SubResource( 25 )

[node name="Particles2D" type="Particles2D" parent="CanvasLayer/PopupWindow"]
position = Vector2( 13, 20 )
emitting = false
amount = 30
lifetime = 5.0
one_shot = true
speed_scale = 1.8
explosiveness = 1.0
visibility_rect = Rect2( -10, -12, 66, 21 )
process_material = SubResource( 26 )
texture = ExtResource( 14 )

[node name="Tween" type="Tween" parent="CanvasLayer"]

[node name="ErrorSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -10.0

[node name="UpgradeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -10.0

[connection signal="button_down" from="CanvasLayer/PopupWindow/Slot1" to="." method="_on_Slot1_button_down"]
[connection signal="button_up" from="CanvasLayer/PopupWindow/Slot1" to="." method="_on_Slot1_button_up"]
[connection signal="pressed" from="CanvasLayer/PopupWindow/Slot1" to="." method="_on_Slot1_pressed"]
[connection signal="button_down" from="CanvasLayer/PopupWindow/Slot2" to="." method="_on_Slot2_button_down"]
[connection signal="button_up" from="CanvasLayer/PopupWindow/Slot2" to="." method="_on_Slot2_button_up"]
[connection signal="pressed" from="CanvasLayer/PopupWindow/Slot2" to="." method="_on_Slot2_pressed"]
[connection signal="button_down" from="CanvasLayer/PopupWindow/Slot3" to="." method="_on_Slot3_button_down"]
[connection signal="button_up" from="CanvasLayer/PopupWindow/Slot3" to="." method="_on_Slot3_button_up"]
[connection signal="pressed" from="CanvasLayer/PopupWindow/Slot3" to="." method="_on_Slot3_pressed"]
[connection signal="pressed" from="CanvasLayer/PopupWindow/RestButton" to="." method="_on_RestButton_pressed"]
[connection signal="pressed" from="CanvasLayer/PopupWindow/UpgradeButton" to="." method="_on_UpgradeButton_pressed"]
[connection signal="pressed" from="CanvasLayer/PopupWindow/CloseButton" to="." method="_on_CloseButton_pressed"]
